# javisLLM-

./: .dockerignore  .env.monthly.example  .gitignore  ADMINPANEL_DESIGN_GUIDE.md  ADMINPANEL_LAYOUT_GUIDE.md  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README.md  SHADCNBLOCKS_REFERENCE_GUIDE.md  STACK_AFTER_QUEUE_MIGRATION.md  dashboard.html  export_standalone_dashboard.py  justfile  llm_mention_benchmark.py  llm_visability_compeditors.html  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  readme2.md  requirements.txt  security_best_practices_report.md  sidebar-layout.md  vercel.json  worker
api/: [...route].js  _github.js  _rate-limit.js  entry.js
automation/: apps_script  launchd
config/: benchmark_config.json
dashboard/: dashboard.html  export_standalone_dashboard.py  llm_visability_compeditors.html
docs/: AGENT_STACK_MAP.md  monthly_automation.md
output/: comparison_table.csv  llm_outputs.jsonl  llm_outputs_pretty.json  looker_competitor_chart.csv  looker_kpi.csv  looker_studio_table.csv  looker_studio_table_paste.csv  viability_index.csv
scripts/: build_looker_dataset.py  export_supabase_run_to_legacy_csv.py  fetch_salesforce_soql.py  install_launch_agent.sh  monthly_run.sh  pull_config_from_supabase.py  push_competitor_blogs_to_supabase.py  push_to_sheets_webapp.py  push_to_supabase.py  resolve_benchmark_models.py  trigger_benchmark_run.py
supabase/: AGENTS.md  config.toml  seed.sql
tests/: test_benchmark_worker.py  test_build_looker_dataset.py  test_chatgpt_web_parser.mjs  test_llm_mention_benchmark.py  (+3 more)
(+218 files in other folders)
