[project]
name = "easy-llm-benchmarker"
version = "0.1.0"
description = "Runtime-first monorepo for LLM benchmarking, queue workers, and the web app."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.34.0",
  "benchmark-core",
  "openai>=1.0.0",
  "supabase>=2.15.0",
]

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "pytest>=8.4.2",
  "ruff>=0.12.12",
]

[tool.uv.sources]
benchmark-core = { path = "packages/py/benchmark_core", editable = true }

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "packages/py/benchmark_core/src",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
pretty = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "packages/py/benchmark_core/src",
]

[tool.ruff]
line-length = 88
target-version = "py311"
